--- a/src/backend/.env
+++ b/src/backend/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://postgres:EutbsFkLoJjeBbDApcJLQuvDfRHLNeiD@mainline.proxy.rlwy.net:25036/railway
+DATABASE_URL=postgresql://postgres:vjLulYLXGEnylGDOwCcJdifksltsLxau@interchange.proxy.rlwy.net:12270/railway
 JWT_SECRET=jwt_secret
 EMAIL_USER=ahmad28082005@gmail.com
 EMAIL_PASS=lqec lpyg cqbb zbsz
