--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -5,6 +5,9 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
